@@ -39,6 +39,7 @@ val eval_progn(val forms, val env, val ctx_form);
 val eval(val form, val env, val ctx_form);
 val eval_intrinsic(val form, val env);
 val expand(val form);
+val expand_forms(val forms);
 val bindable(val obj);
 val mapcarv(val fun, val list_of_lists);
 
